--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <!-- CSS -->
     <link
       rel="stylesheet"
-      href="./assets/css/home/section-trending-product.css"
+      href="./assets/css/home/section-top-page-product.css"
     />
     <link rel="stylesheet" href="./assets/css/home/section-under-top.css" />
-    <link rel="stylesheet" href="./assets/css/home/responsive.css" />
+    <link rel="stylesheet" href="./assets/css/home/section-trending-product-1.css" />
   </head>
   <body>
     <!-- Sub-header -->
@@ -424,7 +424,52 @@
 
     <!-- Section trending product 1-->
     <section class="trend-prod-1">
-      
+      <div class="container-1600">
+        <ul class="trend-prod-1__product-list">
+          <li class="trend-prod-1__item trend-prod-1__item-1">
+            <a href="" class="trend-prod-1__item-link">
+              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-1__item trend-prod-1__item-2">
+            <a href="" class="trend-prod-1__item-link">
+              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-1__item trend-prod-1__item-3">
+            <a href="" class="trend-prod-1__item-link">
+              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-1__item trend-prod-1__item-4">
+            <a href="" class="trend-prod-1__item-link">
+              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-1__item trend-prod-1__item-5">
+            <a href="" class="trend-prod-1__item-link">
+              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-1__item trend-prod-1__item-6">
+            <a href="" class="trend-prod-1__item-link">
+              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-1__item trend-prod-1__item-7">
+            <a href="" class="trend-prod-1__item-link">
+              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <script type="module">
