--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       href="./assets/css/home/section-top-page-product.css"
     />
     <link rel="stylesheet" href="./assets/css/home/section-under-top.css" />
-    <link rel="stylesheet" href="./assets/css/home/section-trending-product-1.css" />
+    <link rel="stylesheet" href="./assets/css/home/section-trending-products-1.css" />
+    <link rel="stylesheet" href="./assets/css/home/section-trending-products-2.css" />
+    <link rel="stylesheet" href="./assets/css/home/section-trending-products-3.css" />
   </head>
   <body>
     <!-- Sub-header -->
@@ -422,7 +424,7 @@
       </div>
     </section>
 
-    <!-- Section trending product 1-->
+    <!-- Section trending products 1-->
     <section class="trend-prod-1">
       <div class="container-1600">
         <ul class="trend-prod-1__product-list">
@@ -471,6 +473,51 @@
         </ul>
       </div>
     </section>
+
+    <!-- Section trending products 2 -->
+    <section class="trend-prod-2">
+      
+    </section>
+
+    <!-- Section trending products 3 -->
+    <section class="trend-prod-3">
+      <div class="container-1600">
+        <ul class="trend-prod-3__product-list">
+          <li class="trend-prod-3__item trend-prod-3__item-1">
+            <a href="" class="trend-prod-3__item-link">
+              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-3__item trend-prod-3__item-2">
+            <a href="" class="trend-prod-3__item-link">
+              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-3__item trend-prod-3__item-3">
+            <a href="" class="trend-prod-3__item-link">
+              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-3__item trend-prod-3__item-4">
+            <a href="" class="trend-prod-3__item-link">
+              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+          <li class="trend-prod-3__item trend-prod-3__item-5">
+            <a href="" class="trend-prod-3__item-link">
+              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Footer -->
 
     <script type="module">
       import { renderHeader } from './assets/js/commons/header.js';
