--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
     </section>
 
     <!-- Footer -->
+    <footer class="footer"></footer>
 
     <script type="module">
       import { renderHeader } from './assets/js/commons/header.js';
