--- a/index.html
+++ b/index.html
@@ -47,9 +47,18 @@
       href="./assets/css/home/section-top-page-product.css"
     />
     <link rel="stylesheet" href="./assets/css/home/section-under-top.css" />
-    <link rel="stylesheet" href="./assets/css/home/section-trending-products-1.css" />
-    <link rel="stylesheet" href="./assets/css/home/section-trending-products-2.css" />
-    <link rel="stylesheet" href="./assets/css/home/section-trending-products-3.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/css/home/section-trending-products-1.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./assets/css/home/section-trending-products-2.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./assets/css/home/section-trending-products-3.css"
+    />
   </head>
   <body>
     <!-- Sub-header -->
@@ -295,7 +304,11 @@
                         alt="Hot product image"
                       />
 
-                      <button class="btn btn-primary under-top__hot-item-add-cart-btn">+ Thêm</button>
+                      <button
+                        class="btn btn-primary under-top__hot-item-add-cart-btn"
+                      >
+                        + Thêm
+                      </button>
                     </div>
 
                     <p class="under-top__hot-item-name">
@@ -323,7 +336,11 @@
                         alt="Hot product image"
                       />
 
-                      <button class="btn btn-primary under-top__hot-item-add-cart-btn">+ Thêm</button>
+                      <button
+                        class="btn btn-primary under-top__hot-item-add-cart-btn"
+                      >
+                        + Thêm
+                      </button>
                     </div>
 
                     <p class="under-top__hot-item-name">
@@ -351,7 +368,11 @@
                         alt="Hot product image"
                       />
 
-                      <button class="btn btn-primary under-top__hot-item-add-cart-btn">+ Thêm</button>
+                      <button
+                        class="btn btn-primary under-top__hot-item-add-cart-btn"
+                      >
+                        + Thêm
+                      </button>
                     </div>
 
                     <p class="under-top__hot-item-name">
@@ -379,7 +400,11 @@
                         alt="Hot product image"
                       />
 
-                      <button class="btn btn-primary under-top__hot-item-add-cart-btn">+ Thêm</button>
+                      <button
+                        class="btn btn-primary under-top__hot-item-add-cart-btn"
+                      >
+                        + Thêm
+                      </button>
                     </div>
 
                     <p class="under-top__hot-item-name">
@@ -407,7 +432,11 @@
                         alt="Hot product image"
                       />
 
-                      <button class="btn btn-primary under-top__hot-item-add-cart-btn">+ Thêm</button>
+                      <button
+                        class="btn btn-primary under-top__hot-item-add-cart-btn"
+                      >
+                        + Thêm
+                      </button>
                     </div>
 
                     <p class="under-top__hot-item-name">
@@ -430,43 +459,71 @@
         <ul class="trend-prod-1__product-list">
           <li class="trend-prod-1__item trend-prod-1__item-1">
             <a href="" class="trend-prod-1__item-link">
-              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <img
+                class="trend-prod-1__item-img"
+                src="./assets/imgs/home/mock-banner-1.webp"
+                alt="Product banner"
+              />
               <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-1__item trend-prod-1__item-2">
             <a href="" class="trend-prod-1__item-link">
-              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <img
+                class="trend-prod-1__item-img"
+                src="./assets/imgs/home/mock-banner-1.webp"
+                alt="Product banner"
+              />
               <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-1__item trend-prod-1__item-3">
             <a href="" class="trend-prod-1__item-link">
-              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <img
+                class="trend-prod-1__item-img"
+                src="./assets/imgs/home/mock-banner-1.webp"
+                alt="Product banner"
+              />
               <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-1__item trend-prod-1__item-4">
             <a href="" class="trend-prod-1__item-link">
-              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <img
+                class="trend-prod-1__item-img"
+                src="./assets/imgs/home/mock-banner-1.webp"
+                alt="Product banner"
+              />
               <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-1__item trend-prod-1__item-5">
             <a href="" class="trend-prod-1__item-link">
-              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <img
+                class="trend-prod-1__item-img"
+                src="./assets/imgs/home/mock-banner-1.webp"
+                alt="Product banner"
+              />
               <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-1__item trend-prod-1__item-6">
             <a href="" class="trend-prod-1__item-link">
-              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <img
+                class="trend-prod-1__item-img"
+                src="./assets/imgs/home/mock-banner-1.webp"
+                alt="Product banner"
+              />
               <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-1__item trend-prod-1__item-7">
             <a href="" class="trend-prod-1__item-link">
-              <img class="trend-prod-1__item-img" src="./assets/imgs/home/mock-banner-1.webp" alt="Product banner">
+              <img
+                class="trend-prod-1__item-img"
+                src="./assets/imgs/home/mock-banner-1.webp"
+                alt="Product banner"
+              />
               <h3 class="trend-prod-1__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
@@ -475,9 +532,7 @@
     </section>
 
     <!-- Section trending products 2 -->
-    <section class="trend-prod-2">
-      
-    </section>
+    <section class="trend-prod-2"></section>
 
     <!-- Section trending products 3 -->
     <section class="trend-prod-3">
@@ -485,31 +540,51 @@
         <ul class="trend-prod-3__product-list">
           <li class="trend-prod-3__item trend-prod-3__item-1">
             <a href="" class="trend-prod-3__item-link">
-              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <img
+                src="./assets/imgs/home/mock-banner-3.webp"
+                alt="Product banner image"
+                class="trend-prod-3__item-img"
+              />
               <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-3__item trend-prod-3__item-2">
             <a href="" class="trend-prod-3__item-link">
-              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <img
+                src="./assets/imgs/home/mock-banner-3.webp"
+                alt="Product banner image"
+                class="trend-prod-3__item-img"
+              />
               <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-3__item trend-prod-3__item-3">
             <a href="" class="trend-prod-3__item-link">
-              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <img
+                src="./assets/imgs/home/mock-banner-3.webp"
+                alt="Product banner image"
+                class="trend-prod-3__item-img"
+              />
               <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-3__item trend-prod-3__item-4">
             <a href="" class="trend-prod-3__item-link">
-              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <img
+                src="./assets/imgs/home/mock-banner-3.webp"
+                alt="Product banner image"
+                class="trend-prod-3__item-img"
+              />
               <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
           <li class="trend-prod-3__item trend-prod-3__item-5">
             <a href="" class="trend-prod-3__item-link">
-              <img src="./assets/imgs/home/mock-banner-3.webp" alt="Product banner image" class="trend-prod-3__item-img">
+              <img
+                src="./assets/imgs/home/mock-banner-3.webp"
+                alt="Product banner image"
+                class="trend-prod-3__item-img"
+              />
               <h3 class="trend-prod-3__item-title">Glorious Series One Pro</h3>
             </a>
           </li>
@@ -522,8 +597,13 @@
 
     <script type="module">
       import { renderHeader } from './assets/js/commons/header.js';
+      import { renderFooter } from './assets/js/commons/footer.js';
+
       const header = document.querySelector('header.header');
       renderHeader(header);
+
+      const footer = document.querySelector('footer.footer');
+      renderFooter(footer);
     </script>
   </body>
 </html>
